// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-input-type-field Renders \`c-input-type-field\` with custom props 1`] = `
<div
  class="v-input c-input-type-field v-text-field v-text-field--solo-flat v-select v-input--hide-details v-input--is-label-active v-input--is-dirty v-input--is-disabled theme--light"
  errormessages="Message"
  role="combobox"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <label
          aria-hidden="true"
          class="v-label v-label--active v-label--is-disabled theme--light"
          style="left: 0px; position: absolute;"
        >
          Custom label
        </label>
        <div
          class="v-select__selections"
        >
          <i
            aria-hidden="true"
            class="v-icon c-input-type-field__icon material-icons theme--light"
            style="font-size: 16px;"
          >
            exposure_plus_1
          </i>
          <input
            aria-label="Custom label"
            aria-readonly="false"
            autocomplete="on"
            disabled="disabled"
            name="name"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon v-icon--disabled material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
  </div>
</div>
`;

exports[`c-input-type-field Renders \`c-input-type-field\` with custom props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        class="primary--text"
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link v-list__tile--active theme--light primary--text"
        >
          <div
            class="v-list__tile__avatar c-input-type-field__avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon c-input-type-field__icon material-icons theme--light"
                style="font-size: 16px;"
              >
                exposure_plus_1
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Number
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar c-input-type-field__avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon c-input-type-field__icon material-icons theme--light"
                style="font-size: 16px;"
              >
                title
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              String
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar c-input-type-field__avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon c-input-type-field__icon material-icons theme--light"
                style="font-size: 16px;"
              >
                view_array
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Array
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar c-input-type-field__avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon c-input-type-field__icon material-icons theme--light"
                style="font-size: 16px;"
              >
                space_bar
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Null
            </div>
          </div>
        </a>
      </div>
      <div
        role="listitem"
      >
        <a
          class="v-list__tile v-list__tile--link theme--light"
        >
          <div
            class="v-list__tile__avatar c-input-type-field__avatar"
          >
            <div
              class="v-avatar"
              style="height: 40px; width: 40px;"
            >
              <i
                aria-hidden="true"
                class="v-icon c-input-type-field__icon material-icons theme--light"
                style="font-size: 16px;"
              >
                toggle_on
              </i>
            </div>
          </div>
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              Custom boolean
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`c-input-type-field Renders \`c-input-type-field\` with default props 1`] = `
<div
  class="v-input c-input-type-field v-text-field v-select v-input--hide-details theme--light"
  role="combobox"
>
  <div
    class="v-input__control"
  >
    <div
      class="v-input__slot"
    >
      <div
        class="v-select__slot"
      >
        <div
          class="v-select__selections"
        >
          <input
            aria-readonly="false"
            autocomplete="on"
            name="type"
            readonly="readonly"
            type="text"
          />
        </div>
        <div
          class="v-input__append-inner"
        >
          <div
            class="v-input__icon v-input__icon--append"
          >
            <i
              aria-hidden="true"
              class="v-icon material-icons theme--light"
            >
              arrow_drop_down
            </i>
          </div>
        </div>
      </div>
      <div
        class="v-menu"
      />
    </div>
  </div>
</div>
`;

exports[`c-input-type-field Renders \`c-input-type-field\` with default props 2`] = `
<div
  class="v-menu__content theme--light "
  style="max-height: 300px; min-width: 0px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 0; display: none;"
>
  <div
    class="v-select-list v-card theme--light"
  >
    <div
      class="v-list v-list--dense theme--light"
      role="list"
    >
      <div
        role="listitem"
      >
        <div
          class="v-list__tile theme--light"
        >
          <div
            class="v-list__tile__content"
          >
            <div
              class="v-list__tile__title"
            >
              No data available
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
